# NaturalGasTrading

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: archive_weather_dag.py  bias_correction_dag.py  consensus_estimate_dag.py  eia_storage_dag.py  futures_price_dag.py  trading_calendar_dag.py  weather_model_dag.py  weekly_analysis_dag.py
dashboard/: app.py
db/: schema.sql
natgas/alerts/: notifier.py
natgas/analysis/: __init__.py  bias_correction.py  model_benchmarking.py  price_sensitivity.py  seasonal_tracker.py  storage_model.py  surprise_signal.py
natgas/calendar/: trading_calendar.py
natgas/db/: connection.py
natgas/pipelines/: analyst_consensus.py  eia_storage.py  futures_prices.py  supply_demand.py  weather_models.py
natgas/population_weights/: weight_masks.py
tests/: test_bias_correction.py  test_model_benchmarking.py  test_pipelines.py  test_seasonal_tracker.py  test_storage_model.py  test_surprise_signal.py  test_trading_calendar.py
